# cvat-ultralytics-bot

./: .gitignore  README.md  pyproject.toml
cvat_ultralytics_bot/: __init__.py  annotator.py  cli.py  config.py  cvat_utils.py  logging_config.py  models.py  types.py
cvat_ultralytics_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cvat_ultralytics_bot/annotation_tools/: __init__.py  base.py  dinov3_detect.py  fusion.py  openai_vlm.py  registry.py  sam3.py  yolo_detect.py  yolo_detect_vlm_check.py  yolo_sam.py  yolo_segment.py
cvat_ultralytics_bot/preset_annotation_configs/: dinov3_detect.toml  fusion.toml  openai_vlm.toml  sam3.toml  yolo_detect.toml  yolo_detect_vlm_check.toml  yolo_sam.toml  yolo_sam3.toml  yolo_segment.toml
tests/: test_annotator.py  test_cli.py  test_config.py  test_cvat_utils.py
